# edu-sim_

./: .gitignore  AI_MODELS.md  DEPLOY_VERCEL.md  ML_PIPELINE.md  PROJECT_STATUS.md  README.md  check.db  check.db-journal  edu_sim.db  edu_sim.db-journal  edu_sim_store.json  pyproject.toml  requirements-ml.txt  requirements.txt  result.json  vercel.json
api/: health.py  index.py  sample.py  simulate.py
sample_data/: lecture.txt  lecture_package.json  students.json  students_specific.json  students_synthetic.json
src/edu_sim/: __init__.py  assessment_policy.py  cli.py  interview_engine.py  lecture_engine.py  lecture_package.py  llm_interview_engine.py  models.py  orchestrator.py  plan_service.py  repository.py  rubric_engine.py  student_profile_factory.py  student_simulator.py  student_trained_model.py
src/edu_sim/__pycache__/: __init__.cpython-312.pyc.2954813221872  cli.cpython-312.pyc.1945686905936  cli.cpython-312.pyc.2954813223440  interview_engine.cpython-312.pyc.1472800102016  lecture_engine.cpython-312.pyc.2954821049392  models.cpython-312.pyc.2861141947232  (+6 more)
src/edu_sim_ml/: __init__.py  aihub_loader.py  cli.py  interviewer_finetune.py  lecture_package_builder.py  student_sim_trainer.py  student_trainset_builder.py  train_whisper_lora.py  transcribe_openai.py
tests/: test_aihub_ml_pipeline.py  test_interviewer_finetune.py  test_llm_interview_fallback.py  test_student_modes.py  test_student_sim_trainer.py  test_workflow.py
tests/__pycache__/: test_workflow.cpython-312.pyc.1945686237664  test_workflow.cpython-312.pyc.2861141254624
web/: index.html
