[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edu-sim"
version = "0.1.0"
description = "MVP for AI student simulation and lecture outcome validation"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "edu_sim team" }]
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
